<resources>
    <string name="app_name">MyCashBook</string>

    <string name="money_hint_text">所持金額を入力</string>
    <string name="yen_text">円</string>
    <string name="decide_text">決定</string>

    <!-- Input Record -->
    <string name="plus_button">収入</string>
    <string name="minus_button">支出</string>
    <string name="zero_button">0</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="formula_text"/>
    <string name="del_button">DEL</string>
    <string name="content_hint_text">摘要</string>
</resources>
